--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "testTodos",
+  "scripts": {
+    "start": "node server.js"
+  },
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
