--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "zone.js": "~0.10.2",
     "express": "^4.17.1"
   },
-  "engines": {
+  ,
+  "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.3",
     "@angular/cli": "~11.0.3",
     "@angular/compiler-cli": "~11.0.3",
@@ -37,7 +38,9 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2",
+    "typescript": "~4.0.2"
+  },
+  "engines": {
     "node": "12.x",
     "npm": "6.14.6"
   }
