--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "private": true,
   "scripts": {
     "heroku-postbuild": "npm install",
-    "start": "node server.js",
-    "postinstall": "npm run --prefix ./ng-app build"
+    "postinstall": "npm run --prefix ./ng-app build",
+    "start": "node server.js"
   },
   "dependencies": {
     "@angular/animations": "~11.0.3",
     "@angular/common": "~11.0.3",
     "@angular/compiler": "~11.0.3",
+    "@angular/cli": "~11.0.3",
+    "@angular/compiler-cli": "~11.0.3",
     "@angular/core": "~11.0.3",
     "@angular/forms": "~11.0.3",
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
+    "typescript": "~4.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2",
@@ -23,7 +26,6 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.3",
     "@angular/cli": "~11.0.3",
-    "@angular/compiler-cli": "~11.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -36,8 +38,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "tslint": "~6.1.0"
   },
   "engines": {
     "node": "12.x",
