--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "testTodos",
   "private": true,
-  "scripts": {}
+  "scripts": {},
+  "engines": {
+    "node": "12.x",
+    "npm": "6.14.6"
+  }
 }
