--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "testTodos",
   "private": true,
   "scripts": {
-    "heroku-postbuild": "npm i ng-app && cd ng-app && npm run build && npm run start"
+    "heroku-postbuild": "npm i ng-app && cd ng-app && npm run build && node server.js"
   },
   "engines": {
     "node": "12.18.4",
