--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
-  "name": "testTodos",
+  "name": "testtodos",
   "private": true,
   "scripts": {
-    "heroku-postbuild": "npm i ng-app && cd ng-app && npm run build"
+    "heroku-postbuild": "npm i ng-app && cd ng-app && npm run build",
+    "start": "node server.js"
   },
   "engines": {
     "node": "12.18.4",
     "npm": "6.14.6"
+  },
+  "description": "This README would normally document whatever steps are necessary to get the application up and running.",
+  "version": "1.0.0",
+  "main": "server.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
