--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "testtodos",
   "private": true,
   "scripts": {
-    "heroku-postbuild": "npm install ng-app && npm install && node server.js",
+    "heroku-postbuild": "npm install ng-app && npm install",
     "start": "node server.js"
   },
   "engines": {
