--- a/ng-app/package.json
+++ b/ng-app/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
+    "typescript": "~4.0.2",
     "class-transformer": "^0.4.0",
     "es6-shim": "^0.35.6",
     "reflect-metadata": "^0.1.13",
@@ -45,6 +46,5 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
   }
 }
