--- a/ng-app/package.json
+++ b/ng-app/package.json
@@ -15,16 +15,12 @@
     "@angular/cdk": "^11.2.6",
     "@angular/common": "~11.0.3",
     "@angular/compiler": "~11.0.3",
-    "@angular-devkit/build-angular": "~0.1100.3",
-    "@angular/cli": "~11.0.3",
-    "@angular/compiler-cli": "~11.0.3",
     "@angular/core": "~11.0.3",
     "@angular/forms": "~11.0.3",
     "@angular/material": "^11.2.6",
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
-    "typescript": "~4.0.2",
     "class-transformer": "^0.4.0",
     "es6-shim": "^0.35.6",
     "reflect-metadata": "^0.1.13",
@@ -33,6 +29,9 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1100.3",
+    "@angular/cli": "~11.0.3",
+    "@angular/compiler-cli": "~11.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -45,6 +44,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0"
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.2"
   }
 }
