--- a/ng-app/package.json
+++ b/ng-app/package.json
@@ -11,10 +11,13 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.1100.7",
     "@angular/animations": "~11.0.3",
     "@angular/cdk": "^11.2.6",
+    "@angular/cli": "^11.0.7",
     "@angular/common": "~11.0.3",
     "@angular/compiler": "~11.0.3",
+    "@angular/compiler-cli": "^11.0.9",
     "@angular/core": "~11.0.3",
     "@angular/forms": "~11.0.3",
     "@angular/material": "^11.2.6",
@@ -26,12 +29,10 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "typescript": "^4.0.7",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.3",
-    "@angular/cli": "~11.0.3",
-    "@angular/compiler-cli": "~11.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -44,7 +45,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "tslint": "~6.1.0"
   }
 }
