--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": "12.18.4",
     "npm": "6.14.6"
   },
-  "description": "This README would normally document whatever steps are necessary to get the application up and running.",
+  "description": "",
   "version": "1.0.0",
   "main": "",
   "directories": {
