--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "testtodos",
   "private": true,
   "scripts": {
-    "heroku-postbuild": "ng build --prod"
+    "heroku-postbuild": "cd ng-app && ng build --prod"
   },
   "engines": {
     "node": "12.18.4",
