--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "testtodos",
   "private": true,
-  "scripts": {},
+  "scripts": {
+    "heroku-postbuild": "npm install ng-app && npm run build --prod --prefix ng-app"
+  },
   "engines": {
     "node": "12.18.4",
     "npm": "6.14.6"
