--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "testtodos",
   "private": true,
   "scripts": {
-    "heroku-postbuild": "npm install ng-app && npm run build --prefix ng-app"
+    "heroku-postbuild": "npm install ng-app",
+    "postinstall": "npm run build --prefix ng-app"
   },
   "engines": {
     "node": "12.18.4",
