--- a/ng-app/package.json
+++ b/ng-app/package.json
@@ -29,7 +29,6 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "typescript": "^4.0.7",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -45,6 +44,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0"
+    "tslint": "~6.1.0",
+    "typescript": "^4.1.5"
   }
 }
