--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "testtodos",
   "private": true,
   "scripts": {
-    "heroku-postbuild": "npm install ng-app",
-    "postinstall": "npm run build --prefix ng-app"
+    "heroku-postbuild": "ng build --prod"
   },
   "engines": {
     "node": "12.18.4",
