--- a/ng-app/package.json
+++ b/ng-app/package.json
@@ -29,7 +29,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "typescript": "^4.1.5"
   },
   "devDependencies": {
     "@types/jasmine": "~3.6.0",
@@ -44,7 +45,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "^4.1.5"
+    "tslint": "~6.1.0"
   }
 }
