--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "testtodos",
   "private": true,
   "scripts": {
-    "heroku-postbuild": "npm i ng-app&& npm i && npm run build --prefix ./ng-app"
+    "heroku-postbuild": "cd ng-app && npm install && npm run build --prefix ./ng-app"
   },
   "engines": {
     "node": "12.18.4",
